# shell

./: CMakeLists.txt  cd.cpp  cd.h  clear_spaces.cpp  clear_spaces.h  clear_void.cpp  clear_void.h  execute.cpp  execute.h  ls.cpp  ls.h  main.cpp  parse_io.cpp  parse_io.h  parse_redirection.cpp  parse_redirection.h  pwd.cpp  pwd.h  read_from_file.cpp  read_from_file.h  split.cpp  split.h  write_to_file.cpp  write_to_file.h
